Make REGRIND test if all registers are in bounds, and fix one out of bounds thing
We do care about X ~ X in unification, since it avoids wrongly unifying with something else later on.

--- a/Documentation/spec-macros.css
+++ b/Documentation/spec-macros.css
@@ -147,6 +147,8 @@ tr {
 .stt {
     /* Disable italics we inherit from argument lists */
     font-style: normal;
+    /* Don't try to justify code, that looks bad */
+    text-justify: none;
 }
 
 .refcolumn {
